fix(java8): replace Set.of() with Java 8 compatible HashSet
- Set.of() is Java 9+ API, project targets Java 8
- Discovered during plan 11-01 test compilation
- Fix: new HashSet<>(Arrays.asList(...)) pattern

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>